--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     </header>
     <main>
         <section class="features">
-            <h2>Особенности</h2>
+            <h2>Особенности нашего приложения</h2>
             <ul>
                 <li>Простой и удобный интерфейс.</li>
                 <li>Высокая производительность.</li>
                 <li>Бесплатное использование.</li>
+                <li>Счетчик ваших очков.</li>
             </ul>
         </section>
         <section class="download">
@@ -26,7 +27,8 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 Dopo App. Все права защищены.</p>
+        <h1>© 2025 Dopo App. Все права защищены.</h1>
+        <p>The site is made by OVERHAUL</p>
     </footer>
 </body>
 </html>
