--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dopo App | Android Version</title>
+    <title>Dopo App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,7 +18,6 @@
                 <li>Простой и удобный интерфейс.</li>
                 <li>Высокая производительность.</li>
                 <li>Бесплатное использование.</li>
-                <li>Счетчик ваших очков.</li>
             </ul>
         </section>
         <section class="download">
@@ -28,7 +27,7 @@
     </main>
     <footer>
         <h1>© 2025 Dopo App. Все права защищены.</h1>
-        <p>The site is made by OVERHAUL</p>
+        <h1>The site is made by OVERHAUL</h1>
     </footer>
 </body>
 </html>
