--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dopo App</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
             <h2>Скачать приложение</h2>
             <a href="app-release.apk" class="download-button">Скачать APK</a>
         </section>
+
         <section class="features">
             <h2>Особенности нашего приложения</h2>
             <ul>
@@ -24,9 +26,46 @@
                 <li>Бесплатное использование.</li>
             </ul>
         </section>
+        <!--
+    <section class="media">
+        <h2>Галерея</h2>
+        <div class="media-grid">
+            <div class="media-item">
+                <img src="https://via.placeholder.com/300" alt="Пример изображения 1">
+            </div>
+            <div class="media-item">
+                <img src="https://via.placeholder.com/300" alt="Пример изображения 2">
+            </div>
+            <div class="media-item">
+                <img src="https://via.placeholder.com/300" alt="Пример изображения 3">
+            </div>
+        </div>
+    </section>
+    -->
     </main>
     <footer>
-        <h1>© 2025 Dopo App. Все права защищены.</h1>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>О нас</h3>
+                <p>Dopo App — это инновационное приложение, созданное для вашего удобства.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Ссылки</h3>
+                <ul>
+                    <li><a href="#">Политика конфиденциальности</a></li>
+                    <li><a href="#">Условия использования</a></li>
+                    <li><a href="#">Поддержка</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Контакты</h3>
+                <p>Email: support@dopoapp.com</p>
+                <p>Телефон: +7 (123) 456-78-90</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2025 Dopo App. Все права защищены.</p>
+        </div>
     </footer>
 </body>
 </html>
