--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
             <div class="footer-section">
                 <h3>Ссылки</h3>
                 <ul>
-                    <li><a href="#">Политика конфиденциальности</a></li>
-                    <li><a href="#">Условия использования</a></li>
-                    <li><a href="#">Поддержка</a></li>
+                    <li><a href="https://t.me/ov3rhau1" target="_blank">Поддержка</a></li>
+                    <li><a href="https://t.me/ov3rhau1" target="_blank">Telegram</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -65,6 +64,7 @@
         </div>
         <div class="footer-bottom">
             <p>© 2025 Dopo App. Все права защищены.</p>
+            <p>Сделано корпорацией OVERHAUL</p>
         </div>
     </footer>
 </body>
