--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <section class="download">
             <h2>Скачать приложение</h2>
             <a href="app-release.apk" class="download-button">Скачать APK</a>
+            <a href="https://cloud.mail.ru/public/pen6/YWNAKVgYh" class="download-button">Скачать на PC</a>
         </section>
 
         <section class="features">
