--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Dopo App</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="16x16.png">
     <link rel="manifest" href="/path/to/site.webmanifest">
 </head>
 <body>
